[package]
name = "presigned-post-rs"
version = "0.1.0"
edition = "2021"
keywords = ["http", "web", "aws", "s3", "PresignedPostObject"]
categories = ["network-programming", "web-programming"]
description = "Presigned post object operation for aws s3 api"
readme = "README.md"
repository = "https://github.com/ghashy/presigned-post-rs"
license = "MIT"

[dependencies]
hmac = "0.12.1"
base64 = "0.22.1"
sha2 = "0.10.8"
hex = "0.4.3"
thiserror = "2.0.7"
time = { version = "0.3.37", features = [ "macros", "parsing", "formatting", "serde"] }
mediatype = "0.19.18"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

# Optional
utoipa = { version = "5.2.0", optional = true }

[features]
utoipa = ["dep:utoipa"]
